--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Leetcode Problems/.editorconfig
 Hashmaps/Rehashing.exe
 Tries and Huffman Coding/h.exe
+Tries and Huffman Coding/Implementing_Trie.exe
