tries implementation and pattern matching problem

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Leetcode Problems/.editorconfig
 Hashmaps/Rehashing.exe
 Tries and Huffman Coding/h.exe
 Tries and Huffman Coding/Implementing_Trie.exe
+Tries and Huffman Coding/implementing_remove_word_in_Trie.exe
