--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Hashmaps/Rehashing.exe
 Tries and Huffman Coding/h.exe
 Tries and Huffman Coding/Implementing_Trie.exe
 Tries and Huffman Coding/implementing_remove_word_in_Trie.exe
+OOPS 3/virtual_inheritance_constructor_calling_order.exe
+OOPS 3/constructor_calling_concept_in_inheritance_for_default_constructor_from_a_child_class.exe
