--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ OOPS 3/virtual_inheritance_constructor_calling_order.exe
 OOPS 3/constructor_calling_concept_in_inheritance_for_default_constructor_from_a_child_class.exe
 Leetcode Problems/.vscode/settings.json
 *.exe
+bubble_sort.cpp
+bubble_sort.cpp
