--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Leetcode Problems/.vscode/settings.json
 bubble_sort.cpp
 bubble_sort.cpp
 Leetcode Problems/X+Y.pdf
+Recursion/Extra Problems_ Recursion-2109.pdf
+Recursion/Recursion Final-1901.pdf
