--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ bubble_sort.cpp
 Leetcode Problems/X+Y.pdf
 Recursion/Extra Problems_ Recursion-2109.pdf
 Recursion/Recursion Final-1901.pdf
+Recursion/closest point .pdf
