--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Leetcode Problems/X+Y.pdf
 Recursion/Extra Problems_ Recursion-2109.pdf
 Recursion/Recursion Final-1901.pdf
 Recursion/closest point .pdf
+*.pdf
